Updated for better SEO

--- a/src/index.css
+++ b/src/index.css
@@ -374,6 +374,10 @@
   pointer-events: none;
 }
 
+.mylogo {
+  filter: brightness(0) invert(1);
+}
+
 /* Responsive design */
 @media (max-width: 1200px) {
   .pagination-item {
